Interfaces chapter theory and some previous pending changes of Inheritance chapter

--- a/CSharpIntermediateConsoleApp/CSharpIntermediateConsoleApp.csproj
+++ b/CSharpIntermediateConsoleApp/CSharpIntermediateConsoleApp.csproj
@@ -63,12 +63,33 @@
     <Compile Include="Inheritance\AccessModifiers\Customer.cs" />
     <Compile Include="Inheritance\AccessModifiers\GoldCustomer.cs" />
     <Compile Include="Inheritance\CallerClass.cs" />
+    <Compile Include="Inheritance\Casting\Shape.cs" />
+    <Compile Include="Inheritance\Casting\Text.cs" />
+    <Compile Include="Inheritance\ConstructorInheritance\Car.cs" />
+    <Compile Include="Inheritance\ConstructorInheritance\Vehicle.cs" />
     <Compile Include="Inheritance\Stack.cs" />
     <Compile Include="Interfaces\CallerClass.cs" />
-    <Compile Include="Interfaces\Order.cs" />
-    <Compile Include="Interfaces\OrderProcessor.cs" />
-    <Compile Include="Interfaces\Shipment.cs" />
-    <Compile Include="Interfaces\ShippingCalculator.cs" />
+    <Compile Include="Interfaces\Extensibility\ConsoleLogger.cs" />
+    <Compile Include="Interfaces\Extensibility\DbMigrator.cs" />
+    <Compile Include="Interfaces\Extensibility\FileLogger.cs" />
+    <Compile Include="Interfaces\Extensibility\ILogger.cs" />
+    <Compile Include="Interfaces\NotForMultiInheritance\IDraggable.cs" />
+    <Compile Include="Interfaces\NotForMultiInheritance\IDroppable.cs" />
+    <Compile Include="Interfaces\NotForMultiInheritance\Textbox.cs" />
+    <Compile Include="Interfaces\NotForMultiInheritance\UiControl.cs" />
+    <Compile Include="Interfaces\Polymorphism\INotificationChannel.cs" />
+    <Compile Include="Interfaces\Polymorphism\Mail.cs" />
+    <Compile Include="Interfaces\Polymorphism\MailNotificationChannel.cs" />
+    <Compile Include="Interfaces\Polymorphism\MailService.cs" />
+    <Compile Include="Interfaces\Polymorphism\Message.cs" />
+    <Compile Include="Interfaces\Polymorphism\SmsNotificationChannel.cs" />
+    <Compile Include="Interfaces\Polymorphism\Video.cs" />
+    <Compile Include="Interfaces\Polymorphism\VideoEncoder.cs" />
+    <Compile Include="Interfaces\Testability\Order.cs" />
+    <Compile Include="Interfaces\Testability\OrderProcessor.cs" />
+    <Compile Include="Interfaces\Testability\Shipment.cs" />
+    <Compile Include="Interfaces\Testability\ShippingCalculator.cs" />
+    <Compile Include="Interfaces\Testability\IShippingCalculator.cs" />
     <Compile Include="Polymorphism\Abstract\Circle.cs" />
     <Compile Include="Polymorphism\Abstract\Rectangle.cs" />
     <Compile Include="Polymorphism\Abstract\Shape.cs" />
